rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__fuzzy_matching_suggestions.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
`crate::TestStruct::incrementCount` not found. Did you mean one of these?

• `crate::TestStruct::increment_count` (Function)
• `crate::TestStruct::increment_count` (Function)
• `crate::TestStruct::new` (Function)
• `crate::TestStruct::new` (Function)
• `crate::TestStruct::ASSOCIATED_CONST` (AssocConst)
