rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__fuzzy_matching_trait_methods.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
`crate::TestStruct::cute` not found. Did you mean one of these?

• `crate::TestStruct::new` (Function)
• `crate::TestStruct::new` (Function)
• `crate::TestStruct::increment_count` (Function)
• `crate::TestStruct::increment_count` (Function)
• `crate::TestStruct::get_field` (Function)
