rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_constants.snap
---
source: src/tests.rs
expression: result
---
Item: TEST_CONSTANT
Kind: Constant
Visibility: Public
Defined at: fixture_crate::TEST_CONSTANT

A const for testing


```rust
const TEST_CONSTANT: i32 = 42i32;
```
