rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_submodule.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: submodule
Kind: Module
Visibility: Public
Defined at: fixture_crate::submodule

A module with items


Structs:
SubStruct // A struct in a submodule

Enums:
TestEnum // An enum for testing [+2 more lines]

Functions:
sub_function // A function in a submodule

Variants:
VariantA // Variant A (see also [`crate::GenericEnum`])
VariantB // Variant B with data
VariantC // Variant C with struct data (`name` and `value`)
